--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>API Clock</title>
+    <title>Elegant Time Display</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="background-design"></div>
     <div class="clock-container">
-        <h1>Current Time (API)</h1>
+        <h1>Current Time</h1>
         <div id="clock">Loading...</div>
+        <div class="decoration"></div>
     </div>
     <script src="script.js"></script>
 </body>
